--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -435,6 +435,15 @@
     <string name="NotificationMmsMessageRecord_downloading_mms_message">Downloading MMS message</string>
     <string name="NotificationMmsMessageRecord_error_downloading_mms_message">Error downloading MMS message, tap to retry</string>
 
+    <!-- MediaPickerActivity -->
+    <string name="MediaPickerActivity_send_to">Send to %s</string>
+
+    <!-- MediaPickerItemFragment -->
+    <string name="MediaPickerItemFragment_tap_to_select">Tap to select</string>
+
+    <!-- MediaSendActivity -->
+    <string name="MediaSendActivity_add_a_caption">Add a caption...</string>
+
     <!-- MessageRecord -->
     <string name="MessageRecord_message_encrypted_with_a_legacy_protocol_version_that_is_no_longer_supported">Received a message encrypted using an old version of Signal that is no longer supported. Please ask the sender to update to the most recent version and resend the message.</string>
     <string name="MessageRecord_left_group">You have left the group.</string>
