--- a/res/values-lg/strings.xml
+++ b/res/values-lg/strings.xml
@@ -88,7 +88,7 @@ a</string>
   <string name="ConversationActivity_transport_insecure_mms">MMS terina bukumi</string>
   <string name="ConversationActivity_transport_signal">Signal</string>
   <string name="ConversationActivity_lets_switch_to_signal">Katudde ku Signal %1$s</string>
-  <string name="ConversationActivity_lets_use_this_to_chat">Katukozese emboozi eno: %1$s</string>
+  <!-- Removed by excludeNonTranslatables <string name="ConversationActivity_lets_use_this_to_chat">Katukozese emboozi eno: %1$s</string> -->
   <string name="ConversationActivity_specify_recipient">Bambi londa contact</string>
   <string name="ConversationActivity_unblock_this_contact_question">sumulula contact eno</string>
   <string name="ConversationActivity_you_will_once_again_be_able_to_receive_messages_and_calls_from_this_contact">Ojjakudamu okufuna obubaka ne ssimu okuva ew\'omuntu ono</string>
@@ -487,7 +487,7 @@ gy\'olonze (%s) sintuufu.</string>
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">ino kiyinza okumala akaseera.Gumukiriza, ojakutegeezebwa nga okuyingiza kuwedde.</string>
   <string name="database_migration_activity__importing">Kiyingizibwa</string>
   <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Database ezibwa bujja</string>
+  <!-- Removed by excludeNonTranslatables <string name="database_upgrade_activity__updating_database">Database ezibwa bujja</string> -->
   <string name="import_fragment__import_system_sms_database">Yingiza system SMS database</string>
   <string name="import_fragment__import_the_database_from_the_default_system">Yingiza datbase okuva ku apu ya default system messenger</string>
   <string name="import_fragment__import_plaintext_backup">Yingiza backup yo bubaka obuwandike</string>
@@ -521,7 +521,7 @@ gy\'olonze (%s) sintuufu.</string>
   <string name="recipient_preferences__privacy">Byakyaama</string>
   <!--- redphone_call_controls-->
   <string name="redphone_call_card__signal_call">Ssimu okuva ku Signal</string>
-  <string name="redphone_call_controls__mute">Jakko edoboozi</string>
+  <!-- Removed by excludeNonTranslatables <string name="redphone_call_controls__mute">Jakko edoboozi</string> -->
   <!--registration_activity-->
   <string name="registration_activity__phone_number">Enamba yesimu</string>
   <!--recipients_panel-->
