--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -364,7 +364,7 @@
   <string name="database_migration_activity__this_could_take_a_moment_please_be_patient">Ова може да потрае. Бидете стрпливи, ќе бидете известени веднаш штом заврши импортирањето.</string>
   <string name="database_migration_activity__importing">ИМПОТИРАЊЕ</string>
   <!--database_upgrade_activity-->
-  <string name="database_upgrade_activity__updating_database">Ажурирање на базата на податоци…</string>
+  <!-- Removed by excludeNonTranslatables <string name="database_upgrade_activity__updating_database">Ажурирање на базата на податоци…</string> -->
   <string name="import_fragment__import_system_sms_database">Импортирај системска SMS база на податоци</string>
   <string name="import_fragment__import_plaintext_backup">Импортирајте нешифрирана копија</string>
   <!--load_more_header-->
