--- a/app/src/flipper/res/values/strings.xml
+++ b/app/src/flipper/res/values/strings.xml
@@ -1,4 +1,4 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <resources>
-  <string name="app_name">Signal (Staging)</string>
+  <string name="app_name">Signal (Flipper)</string>
 </resources>
